--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,10 +12,10 @@ variables:
   azureSubscription: '529f4048-676b-44ae-8b6d-6d5a28c5b2e6'
 
   # Web app name
-  webAppName: ''
+  webAppName: 'Javates'
 
   # Environment name
-  environmentName: ''
+  environmentName: 'Dev'
 
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
@@ -39,9 +39,8 @@ stages:
       displayName: 'Copy Files to artifact staging directory'
       inputs:
         SourceFolder: '$(System.DefaultWorkingDirectory)'
-        Contents: '**/target/*.?(war|jar)'
+        Contents: '**/target/*.war'
         TargetFolder: $(Build.ArtifactStagingDirectory)
-
     - upload: $(Build.ArtifactStagingDirectory)
       artifact: drop
 
@@ -65,4 +64,4 @@ stages:
               azureSubscription: $(azureSubscription)
               appType: webAppLinux
               appName: $(webAppName)
-              package: '$(Pipeline.Workspace)/drop/**/target/*.?(war|jar)'
+              package: '$(Pipeline.Workspace)/drop/**/target/*.war'
