Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,5 +64,6 @@ stages:
               azureSubscription: $(azureSubscription)
               appType: webAppLinux
               appName: $(webAppName)
-              package: '$(Pipeline.Workspace)/drop/**/target/*.war'
-              StartupCommand: 'bin\startaup.sh'
+              package: '$(System.DefaultWorkingDirectory)/**/*.war'
+              StartupCommand: 'bin\startup.bat'
+
