Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,6 +44,13 @@ stages:
     - upload: $(Build.ArtifactStagingDirectory)
       artifact: drop
 
+    - task: DownloadBuildArtifacts@0
+      inputs:
+        buildType: 'current'
+        downloadType: 'single'
+        artifactName: 'drop'
+        downloadPath: '$(System.ArtifactsDirectory)'
+
 - stage: Deploy
   displayName: Deploy stage
   dependsOn: Build
@@ -64,6 +71,5 @@ stages:
               azureSubscription: $(azureSubscription)
               appType: webAppLinux
               appName: $(webAppName)
-              package: '$(System.DefaultWorkingDirectory)/**/*.war'
-              StartupCommand: 'bin\startup.bat'
-
+              package: '$(System.ArtifactsDirectory)/**/*.war'
+              StartupCommand: 'bin\startup.sh'
